--- a/README
+++ b/README
@@ -7,4 +7,4 @@ Practicum Python/Eclipse/PyDev/Git
 4.Bestudeer elke oefening in "belbob/clw_py/src" repository.
 5.Schrijf een mini-toepassing (max 100 lines code inc.comment), gebruik de aangeboden technieken.(Python)
 6.Schrijf mini-manual over je toepassing, maak gebruik van asciidoc. (VI)
-7.Maak een presentatie met LaTeX over je Python toepassing, min 5 slides. (LyX)
+7.Maak een presentatie met LaTeX over je Python toepassing, min 5 slides. (Texlipse of Vim-LaTeX)
